# cad

src/: BUILD.gn  OdFileBuf.cpp  OdFileBuf.h  geometry.md  main.cc  main_dlg.cc  main_dlg.h  oda_app.cc  oda_app.h  precompile.cc  precompile.h  readme.md  resource.h  resource.rc
src/Ed/: AcEdContext.cc  AcEdContext.h  AcEdGripManager.cc  AcEdGripManager.h  AcEdImpJig.cc  AcEdImpJig.h  AcEdJigImpl.cc  AcEdOsnapManager.cc  AcEdOsnapManager.h
src/Ed/Jig/: AcEdLineJig.cc  AcEdLineJig.h
src/Gc/: AcGsEntityRecorder.cc  AcGsEntityRecorder.h  AcGsPolylineRecorder - 副本.cc  AcGsPolylineRecorder - 副本.h  AcGsPolylineRecorder.cc  AcGsPolylineRecorder.h  AcGsRecorderImpl.cc  AcGsRecorderImpl.h  AcGsShellRecorder - 副本.cc  AcGsShellRecorder - 副本.h  AcGsShellRecorder.cc  AcGsShellRecorder.h  AcGsTextRecorder.cc  AcGsTextRecorder.h  AcGsTraitRecorder.cc  AcGsTraitRecorder.h  AcGsTriangleRecorder.cc  AcGsTriangleRecorder.h
src/Gi/: AcGiMatrix3d.cc  AcGiMatrix3d.h  AcGiVectorizer.cc  AcGiVectorizer.h  AcGiVectorizerGeometry.cc  AcGiVectorizerTrait - 副本.cc  AcGiVectorizerTrait.cc  AcGiVectorizerViewport.cc  AcGiXTransform.cc  AcGiXTransform.h
src/Gs/: AcGsContainerNode.cc  AcGsContainerNode.h  AcGsDeviceImpl.cc  AcGsDeviceImpl.h  AcGsDisplayContextImpl.cc  AcGsDisplayContextImpl.h  AcGsEntityNode.cc  AcGsEntityNode.h  AcGsGraphicsKernelImpl.cc  AcGsGraphicsKernelImpl.h  AcGsLayerNode.cc  AcGsLayerNode.h  AcGsManagerImpl.cc  AcGsManagerImpl.h  AcGsModelImpl.cc  AcGsModelImpl.h  AcGsNodeImpl.cc  AcGsNodeImpl.h  AcGsRenderImpl - 副本.cc  AcGsRenderImpl - 副本.h  AcGsRenderImpl.cc  AcGsRenderImpl.h  AcGsSelectVisitor.cc  AcGsSelectVisitor.h  AcGsSpatialQuery.cc  AcGsSpatialQuery.h  AcGsViewImpl.cc  AcGsViewImpl.h
src/include/: AcGsDisplay.h  AcGsManager.h  acgs.h  adesk.h  dbjig.h
